--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "bugs": {
     "url": "https://github.com/skofman/huh/issues"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "homepage": "https://github.com/skofman/huh#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
