--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "lodash": "^4.7.0",
-    "semantic-ui": "^2.1.8",
+    "semantic-ui": "^2.x",
     "socket.io": "^1.4.5"
   }
 }
